--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
+  <meta name="google-site-verification" content="sblvouChvrBHr2RJ_bhpPK1x6P5L0Lv85cNeSAcGcsM" />
   <link rel="icon" href="%PUBLIC_URL%/cloudyIcon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
